# gameAlgs

./: main.cpp  saves.txt
Lab1/: main.cpp
Lab1/include/: Constants.h  Game.h  Round.h
Lab1/src/: Game.cpp  Input.cpp  Round.cpp
Lab2/: CMakeLists.txt  gTest.cpp  main.cpp
Lab2/include/: Array.h
include/: Game.h  Input.h  RandomModule.h  Round.h
src/: Game.cpp  Input.cpp  Round.cpp
